Fixing close button alignment

--- a/memurb/src/styles/app.scss
+++ b/memurb/src/styles/app.scss
@@ -193,5 +193,9 @@
                     width: 100%;
                 }
             }
+            .justify-end {
+                display: flex;
+                justify-content: flex-end;
+            }
         }
     }
